--- a/psico_app/src/components/button/auth_button.css
+++ b/psico_app/src/components/button/auth_button.css
@@ -4,13 +4,14 @@
 
 .auth-button {
     display: block;
-    height: 70px;
+    height: 65px;
     width: 70%;
     max-width: 350px;
     margin: 20px auto;
     background-color: whitesmoke;
-    border-radius: 15px;
+    border-radius: 12px;
     border: none;
     margin-top: 20px;
     font-size: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
