--- a/psico_app/src/pages/welcomePage.css
+++ b/psico_app/src/pages/welcomePage.css
@@ -10,12 +10,13 @@
     align-items: center;
     justify-content: center;
     width: 70%;
-    height: 70px;
+    height: 65px;
     max-width: 350px;
     margin: 20px auto;
     background-color: whitesmoke;
-    border-radius: 15px;
+    border-radius: 12px;
     margin-top: 10%;
-    margin-bottom: 20px;
+    margin-bottom: 10%;
     font-size: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
