--- a/psico_app/src/pages/authPage/auth.css
+++ b/psico_app/src/pages/authPage/auth.css
@@ -1,21 +1,55 @@
 body {
+    margin: 0;
     background-color: whitesmoke;
 }
 
 .container-auth {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; -> Centraliza verticalmente */
+    height: 100vh;
 }
 
 .login-header {
-    margin-top: 10%;
-    text-align: justify;
+    text-align: left;
     margin: 10px;
 }
 
-.login-header p {
-    font-size: 10px;
+.login-header span {
+    display: flex;
+    align-items: center;
 }
 
-.select-auth-moethod {
-    
+.login-header p {
+    font-size: 12px;
+    margin: 5px 0;
+}
+
+.select-auth-method {
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+    margin-top: 20px;
+    background-color: #EDEDED;
+    border-radius: 12px;
+}
+
+.select-auth-method span {
+    cursor: pointer;
+    flex-grow: 1;
+    max-width: 150px;
+    height: 25px;
+    border-radius: 12px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.select-auth-method span:hover {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
