--- a/psico_app/src/pages/authPage/auth.css
+++ b/psico_app/src/pages/authPage/auth.css
@@ -64,7 +64,7 @@ body {
     border: none;
     border-bottom: 1px solid #979797;
     background-color: transparent;
-    width: 350px;
+    width: 70%;
     font-size: 12px;
 }
 
