--- a/psico_app/src/components/button/send_button.css
+++ b/psico_app/src/components/button/send_button.css
@@ -1,18 +1,17 @@
-.auth-button-container {
+.send-button-container {
     width: auto;
 }
 
-.auth-button {
+.send-button {
     display: block;
     height: 65px;
-    width: 70%;
+    width: 100%;
     max-width: 350px;
     margin: 20px auto;
-    background-color: whitesmoke;
+    background-color: #cfffb0;
     border-radius: 12px;
     border: none;
-    margin-top: 20px;
     font-size: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: #00000066;
 }
-
