--- a/psico_app/src/components/social_auth/social_auth.css
+++ b/psico_app/src/components/social_auth/social_auth.css
@@ -1,9 +1,10 @@
-.auth-button-container {
-    width: auto;
+.social-auth-container {
+    width: 100%;
 }
 
-.auth-button {
-    display: block;
+.social-auth-button {
+    display: flex;
+    align-items: center;
     height: 65px;
     width: 70%;
     max-width: 350px;
@@ -11,8 +12,11 @@
     background-color: whitesmoke;
     border-radius: 12px;
     border: none;
-    margin-top: 20px;
     font-size: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: #00000066;
 }
 
+.social-auth-button h3 {
+    margin-left: 10px;
+}
