--- a/psico_app/src/components/social_auth/social_auth.css
+++ b/psico_app/src/components/social_auth/social_auth.css
@@ -30,3 +30,26 @@
     text-decoration: none;
     color: #A5CC8C;
 }
+
+.or-divider {
+    display: flex;
+    align-items: center;
+    margin: 10px 36px;
+  }
+  
+  .left-line,
+  .right-line {
+    flex: 1;
+    height: 1px;
+    background-color: #B6B6B6;;
+    margin: 0 10px;
+  }
+  
+  .or-divider span {
+    font-size: 12px;
+    color: #B6B6B6;
+  }
+  
+  
+  
+  
