--- a/psico_app/src/pages/authPage/auth.css
+++ b/psico_app/src/pages/authPage/auth.css
@@ -55,7 +55,8 @@ body {
 }
 
 .login-form {
-    margin-top: 20px;
+    margin-top: 20%;
+    margin-bottom: 10%;
     width: 70%;
     text-align: center;
 }
